k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: wichat-es2a
  labels:
    name: wichat-es2a
