k8s/authservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authservice
  namespace: wichat-es2a
  labels:
    app: authservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: authservice
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: authservice
    spec:
      automountServiceAccountToken: false
      containers:
      - name: authservice
        image: wichat-authservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8002
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "512Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
            ephemeral-storage: "1Gi"

---
apiVersion: v1
kind: Service
metadata:
  name: authservice
  namespace: wichat-es2a
spec:
  selector:
    app: authservice
  ports:
  - port: 8002
    targetPort: 8002
  type: ClusterIP
