k8s/gatewayservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayservice
  namespace: wichat-es2a
  labels:
    app: gatewayservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gatewayservice
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: gatewayservice
    spec:
      automountServiceAccountToken: false
      containers:
      - name: gatewayservice
        image: wichat-gatewayservice:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: gatewayservice
  namespace: wichat-es2a
spec:
  selector:
    app: gatewayservice
  ports:
  - port: 8000
    targetPort: 8000
  type: LoadBalancer
