k8s/mathgame.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mathgame
  namespace: wichat-es2a
  labels:
    app: mathgame
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mathgame
  template:
    metadata:
      labels:
        app: mathgame
    spec:
      automountServiceAccountToken: false
      containers:
      - name: mathgame
        image: wichat-mathgame:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3002        
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: mathgame
  namespace: wichat-es2a
spec:
  selector:
    app: mathgame
  ports:
  - port: 3002
    targetPort: 3002
  type: ClusterIP
