k8s/wikidata.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikidata
  namespace: wichat-es2a
  labels:
    app: wikidata
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wikidata
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: wikidata
    spec:
      automountServiceAccountToken: false
      containers:
      - name: wikidata
        image: wichat-wikidata:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 3001

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
            ephemeral-storage: "512Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"

---
apiVersion: v1
kind: Service
metadata:
  name: wikidata
  namespace: wichat-es2a
spec:
  selector:
    app: wikidata
  ports:
  - port: 3001
    targetPort: 3001
  type: ClusterIP
